nav width fix on small screens

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -18,7 +18,6 @@ header {
     height: 5svh;
     backdrop-filter: blur(5px);
     z-index: 1;
-    outline: 1px solid red;
 
 
     > ul {
