--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -6,12 +6,12 @@
     align-items: center;
 
 
-    // > * {
-    //     outline: 1px solid red;
-    // }
+    > * {
+        // outline: 1px solid red;
+    }
 
     .greeting-ctn {
-        height: 250px;
+        height: 150px;
         width: clamp(300px, 50%, 500px);
         overflow-y: hidden;
         position: relative;
@@ -24,7 +24,7 @@
             height: 100%;
             width: 100%;
             background: rgb(0,0,0);
-            background: linear-gradient(0deg, rgba(0,0,0,1) 30%, rgba(255,255,255,0) 50%, rgba(0,0,0,1) 70%);
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.856) 15%, rgba(255, 255, 255, 0) 50%, hsla(0, 0%, 0%, 0.87) 85%);
             z-index: 10;
 
         }
